# app

./: .gitignore  AGENTS.md  Cargo.toml  baseline_search.txt  baseline_search2l.txt  http-api.md  index.html  package.json  tranform.py  vite.config.ts
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.playwright-cli/: page-2026-05-21T12-36-31-807Z.yml  page-2026-05-21T12-36-39-946Z.yml  page-2026-05-21T12-37-06-584Z.yml  page-2026-05-21T12-37-17-949Z.yml  page-2026-05-21T12-38-04-032Z.yml  page-2026-05-21T12-38-05-478Z.yml  page-2026-05-21T12-38-13-414Z.yml  page-2026-05-21T12-38-21-588Z.yml  page-2026-05-21T12-38-47-060Z.yml  page-2026-05-21T12-45-12-245Z.yml  page-2026-05-21T12-49-30-245Z.yml  page-2026-05-21T12-54-53-723Z.yml
RobotApp/RobotApp/: AuthUtils.hpp  ColorCluster.cpp  ColorCluster.h  Coord.cpp  Coord.h  Cube.cpp  Cube.h  Cubie.cpp  Cubie.h  Face.cpp  Face.h  FileUtils.hpp  HandStep.cpp  HandStep.h  ImgUtils.hpp  LabelWidget.cpp  LabelWidget.h  LabelWindow.cpp  LabelWindow.h  LabelWindow.ui  Move.cpp  Move.h  Prun.cpp  Prun.h  RobotApp.aps  RobotApp.cpp  RobotApp.h  RobotApp.rc  RobotApp.ui  RobotApp.vcxproj  RobotApp.vcxproj.filters  RobotStep.cpp  RobotStep.h  StepOptimizer.cpp  StepOptimizer.h  Sym.cpp  Sym.h  cube.json  main.cpp  roi.json
crates/robo-camera/: Cargo.toml
crates/robo-camera/examples/: camera_diagnostic.rs
crates/robo-camera/src/: lib.rs
crates/robo-core/: Cargo.toml
crates/robo-core/src/: lib.rs
crates/robo-handstep/: Cargo.toml
crates/robo-handstep/scripts/: convert_op_table.py
crates/robo-handstep/src/: lib.rs  op_table.rs  types.rs
crates/robo-pipeline/: Cargo.toml
crates/robo-pipeline/src/: lib.rs  multi.rs
crates/robo-solver/: Cargo.toml  build.rs
crates/robo-solver/src/: bridge.cpp  coord_cube.rs  coord_cube_2l.rs  cubie_cube.rs  cubie_cube_2l.rs  lib.rs  search.rs  search_2l.rs  util.rs
crates/robo-translator/: Cargo.toml
crates/robo-translator/src/: lib.rs
crates/robo-transport/: Cargo.toml
crates/robo-transport/src/: lib.rs
crates/robo-vision/: Cargo.toml
crates/robo-vision/examples/: recognize_overlay.rs
crates/robo-vision/src/: lib.rs
docs/: camera-protocol-redesign.md  robo-handstep-port-notes.md
example/: robot-roi.json
robo-app/: Cargo.toml
robo-app/src/: lib.rs  main.rs
robo-ui/: .taurignore  Cargo.toml  robot-roi.json  tauri.conf.json
robo-ui/src/: lib.rs  main.rs
scripts/: recognize.py
scripts/output/: img_20260419_154548_recognized.json  img_20260419_155230_recognized.json  img_20260419_155255_recognized.json  img_20260419_155309_recognized.json  img_20260419_155324_recognized.json  img_20260419_155343_recognized.json  img_20260419_155352_recognized.json  img_20260419_155400_recognized.json  img_20260419_155425_recognized.json  img_20260419_155437_recognized.json  img_20260419_155448_recognized.json  img_20260419_155502_recognized.json  img_20260419_155521_recognized.json  img_20260419_155529_recognized.json  img_20260419_155537_recognized.json  img_20260419_155602_recognized.json  img_20260419_155609_recognized.json  img_20260419_155617_recognized.json  img_20260419_155626_recognized.json  img_20260419_155633_recognized.json  img_20260419_155639_recognized.json  img_20260419_155645_recognized.json  img_20260419_155651_recognized.json
src/: App.css  App.tsx  MoveMappingEditor.tsx  canvasPreview.ts  imageDiagnostics.ts  imageLayout.ts  main.tsx  panelView.ts  roiAnnotation.ts  roiIndexView.ts  solveAction.ts
src-tauri/: tauri.conf.json
tests/: appLayout.test.ts  canvasPreview.test.ts  imageDiagnostics.test.ts  imageLayout.test.ts  panelView.test.ts  roiAnnotation.test.ts  roiIndexView.test.ts  solveAction.test.ts
tools/camera-bench/: Cargo.toml  README.md
tools/camera-bench/src/: main.rs
tools/recognize-cli/: Cargo.toml
tools/recognize-cli/src/: main.rs
tools/solve-cli/: Cargo.toml
tools/solve-cli/src/: main.rs
tools/solve-server/: Cargo.toml
tools/solve-server/src/: main.rs
tools/translate-cli/: Cargo.toml
tools/translate-cli/src/: main.rs
web/: index.html  main.js  styles.css
