[workspace]
members = [
    "robo-ui",
    "crates/robo-core",
    "crates/robo-camera",
    "crates/robo-vision",
    "crates/robo-solver",
    "crates/robo-translator",
    "crates/robo-transport",
    "crates/robo-pipeline",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["wa"]

[workspace.dependencies]
anyhow = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# robo-solver 的 pruning 表生成在无优化模式下极慢，dev 模式也开 opt
[profile.dev.package.robo-solver]
opt-level = 3
