[package]
name = "robo-ui"
version = "0.1.0"
description = "Robo cube solver UI"
authors = ["wa"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "robo_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow.workspace = true
log.workspace = true
fern = "0.7"
chrono = "0.4"
base64 = "0.22"
image = "0.25"
tiny_http = "0.12"
robo-core = { path = "../crates/robo-core" }
robo-camera = { path = "../crates/robo-camera" }
robo-solver = { path = "../crates/robo-solver" }
robo-translator = { path = "../crates/robo-translator" }
robo-transport = { path = "../crates/robo-transport" }
robo-vision = { path = "../crates/robo-vision" }
serialport = "4.9"
