[package]
name = "recognize-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool: read image + ROI, recognize cube facelets, draw result on image"

[[bin]]
name = "recognize-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
robo-core = { path = "../../crates/robo-core" }
robo-vision = { path = "../../crates/robo-vision" }
