[package]
name = "solve-server"
version = "0.1.0"
edition = "2021"
description = "HTTP API server for min2phase cube solver (Search & Search2L)"

[[bin]]
name = "solve-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
log = "0.4"
env_logger = "0.11"
robo-core = { path = "../../crates/robo-core" }
robo-solver = { path = "../../crates/robo-solver" }
robo-translator = { path = "../../crates/robo-translator" }
